Made user routes skeleton and updated swagger
